--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.13",
+    "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.3",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "mongoose": "^6.0.12",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.15",
     "ts-node": "^10.4.0",
