--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.7.1",
     "nodemon": "^2.0.15",
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
@@ -33,6 +34,7 @@
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^8.5.5",
+    "@types/nodemailer": "^6.4.4",
     "@types/passport": "^1.0.7"
   }
 }
