--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "body-parser": "^1.19.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
     "morgan": "^1.10.0",
+    "multer": "^1.4.3",
     "nodemailer": "^6.7.1",
     "nodemon": "^2.0.15",
     "passport": "^0.5.0",
@@ -33,7 +35,10 @@
     "typescript": "^4.4.4"
   },
   "devDependencies": {
+    "@types/express-fileupload": "^1.2.0",
     "@types/jsonwebtoken": "^8.5.5",
+    "@types/multer": "^1.4.7",
+    "@types/node": "^16.11.9",
     "@types/nodemailer": "^6.4.4",
     "@types/passport": "^1.0.7"
   }
